--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     scroll-behavior: smooth;
+    transition: all 0.3s ease-in-out;
 }
 
 header{
@@ -58,7 +58,7 @@ header{
     display: none;
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
     .menu {
         width: 80%;
         max-height: 0;
@@ -82,6 +82,7 @@ header{
     #toggler:checked ~ .menu {
         max-height: 100%;
         box-shadow: 1px 1px 4px #eee;
+        -webkit-box-shadow: 1px 1px 4px #eee;
     }
 
     label {
@@ -92,12 +93,12 @@ header{
 
 .main{
     width: 100%;
-    /*vh = view port = all screen*/
     min-height: 100vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 0 0 50px;
+    overflow: hidden;
 }
 
 .main-text {
@@ -126,14 +127,23 @@ header{
 }
 
 .btns {
-    margin-top: 50px;
-    
+    margin-top: 80px;
 }
 
 .feature-btn {
     margin-top: 30px;
     font-size: 1.1em;
-    color: #5c4d7d;
+    color: #cdb4db;
+    border-radius: 10px;
+    border: 1px solid #cdb4db;
+    padding: 10px;
+    transition: all 0.3s ease-in-out;
+}
+
+.feature-btn:hover {
+    background-color: #cdb4db;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
 }
 
 .feature-btn i {
@@ -149,6 +159,8 @@ header{
     border-radius: 10px;
     margin-right: 30px;
     box-shadow: 1px 1px 4px #eee;
+    -webkit-box-shadow: 1px 1px 4px #eee;
+    transition: all 0.3s ease-in-out;
 }
 
 .main-btn:hover {
@@ -179,6 +191,7 @@ header{
     border-radius: 50%;
     margin: 30px;
     box-shadow: 1px 1px 4px #555;
+    -webkit-box-shadow: 1px 1px 4px #eee;
     color: #eee;
 }
 
@@ -250,6 +263,11 @@ header{
 }
 
 
+@media (max-width: 1200px){
+    .main-text h1 {
+        font-size: 2.4em;
+    }
+}
 
 @media (max-width:1023px){
     .main{
@@ -266,7 +284,6 @@ header{
 
     .main-text {
         transform: translate(15%, 20%);
-        margin: 50px 0;
     }
 
     .features-cont {
