--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ header{
     margin-top: 30px;
     width: 60%;
     font-size: 1.1em;
+    color: #555;
 }
 
 .btns {
@@ -197,6 +198,7 @@ header{
 
 .features-cont h3 {
     font-weight: 400;
+    color: #555;
 }
 
 .about {
@@ -217,6 +219,7 @@ header{
     margin-top: 50px;
     font-size: 1.1em;
     line-height: 2em;
+    color: #555;
 }
 
 .footer {
